// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageContainer match snapshot (with image prop) 1`] = `
<div
  className="image-container"
>
  <img
    className="image-container img"
    src="https://dummyimage.com/largerectangle"
  />
</div>
`;

exports[`ImageContainer match snapshot (without image prop) 1`] = `
<div
  className="image-container"
>
  <div
    className="image-container placeholder"
  >
    <svg>
      info.svg
    </svg>
  </div>
</div>
`;
